Name: hdo
Version: 0.1
Cabal-Version: >= 1.18
Maintainer: Arnaud Bailly <arnaud.oqube@gmail.com>
Author: Arnaud Bailly
Build-Type: Simple
Category: Cloud
License: MIT
License-File: LICENSE
Description:
            Digital Ocean Haskell client

Extra-Source-Files:
    README.md, stack.yaml, LICENSE

Library
  Default-Language:   Haskell2010
  GHC-Options:  -Wall -Werror -fno-warn-orphans -rtsopts -threaded
  Hs-Source-Dirs:  src
  exposed-modules: Commands
                 , DigitalOcean
                 , Net
                 , DO.Net
                 , Names, Pairing
  Build-Depends: aeson
               , base
               , bytestring
               , comonad
               , data-default
               , free
               , iproute
               , lens
               , pretty
               , mtl
               , network-uri
               , random
               , text
               , time
               , transformers
               , unix
               , unordered-containers
               , vector
               , wreq

Executable docean
  Main-Is: hdo.hs
  Hs-Source-Dirs:  main
  Build-depends: base
               , hdo
               , comonad
               , iproute
               , pretty
               , unordered-containers
               , bytestring
               , vector
               , network-uri
               , aeson
               , time
               , transformers
               , free
               , data-default
               , random
               , text
